created Book Model

--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,16 @@
 #
 # Configure Using Gemfile
 # gem "pg"
-#
+
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  idle_timeout: <%= ENV["RAILS_IDLE_CONNECTION"] ||  60 %>
+  port: <%= ENV['RAILS_DATABASE_PORT'] || 5432 %>
+  host: localhost
+  username: postgres
+  password: postgres
 
 development:
   <<: *default
